# Dreka

./: .gitignore  LICENSE  README.md
client/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
client/assets/3d/: art_v1.glb
client/src/: App.svelte  main.ts  smui.css  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
client/src/bindings/: colors.ts  commands.ts  common.ts  communication.ts  events.ts  links.ts  mission.ts  spatial.ts  telemetry.ts  vehicles.ts
client/src/components/: App.svelte  Ping.svelte
client/src/datasource/: rest.ts  ws.ts
client/src/lib/: Ping.svelte  preferences.ts
client/translations/: en_us.json  ru_ru.json  tr_tr.json  uk_ua.json
server/: Cargo.toml
server/src/: context.rs  lib.rs  main.rs
server/src/api/: all_routes.rs  commands.rs  communication.rs  context.rs  mission.rs  missions.rs  mod.rs  root.rs  routes.rs  shared.rs  telemetry.rs  vehicles.rs  websocket.rs
server/src/dal/: dal.rs  dal_commands.rs  dal_communication.rs  dal_missions.rs  dal_missions_test.rs  dal_telemetry.rs  dal_vehicles.rs  mod.rs
server/src/datasource/: db.rs  mod.rs  test_db.rs
server/src/db/: mod.rs  persistence.rs  surreal_dao.rs  surreal_dao_test.rs  surreal_query.rs  surreal_query_test.rs  test_persistence.rs
server/src/middleware/: bus.rs  commands.rs  communication.rs  missions.rs  missions_test.rs  mod.rs  registry.rs  vehicles.rs
server/src/models/: colors.rs  commands.rs  communication.rs  events.rs  links.rs  missions.rs  mod.rs  spatial.rs  telemetry.rs  vehicles.rs
server/src/persistence/: communication.rs  db.rs  mod.rs  repository.rs  repository_test.rs  traits.rs  vehicles.rs
server/src/protocols/: common.rs  hub.rs  links.rs  mod.rs  traits.rs
server/src/protocols/mavlink/: connection.rs  mavlink_connection.rs  mod.rs  protocol.rs
server/src/registry/: commands.rs  mission.rs  mod.rs  registry.rs  vehicles.rs
server/src/routes/: communication.rs  links.rs  mod.rs  root.rs  vehicles.rs
server/src/services/communication/: default_links.rs  mod.rs  service.rs  traits.rs
server/src/services/communication/mavlink/: commands.rs  connection.rs  context.rs  handler.rs  handler_commands.rs  handler_heartbeat.rs  handler_missions.rs  handler_telemetry.rs  heartbeat.rs  mod.rs  telemetry.rs  utils.rs
server/src/services/communication/mavlink/commands/: handler.rs  mod.rs  protocol.rs
server/src/services/communication/mavlink/handler/: handler.rs  handler_commands.rs  handler_heartbeat.rs  handler_missions.rs  handler_telemetry.rs  mod.rs
server/src/services/communication/mavlink/heartbeat/: handler.rs  protocol.rs
server/src/services/communication/mavlink/missions/: handler.rs  protocol.rs
server/src/services/communication/mavlink/protocol/: commands.rs  geodetic.rs  missions.rs  mod.rs  modes.rs  telemetry.rs
server/src/services/communication/mavlink/telemetry/: handler.rs  protocol.rs
(+139 files in other folders)
