[package]
name = "brygge"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = "0.7.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
actix-web = "4"
actix-cors = "0.6.4"
mavlink = "0.12.0"
ts-rs = "7.0.0"

surrealdb = { version = "1.0.0", features = ["kv-mem", "kv-rocksdb"] }
serde_with = { version = "3.3.0", features = ["json"] }
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
