[package]
name = "brygge"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
anyhow = "1.0.80"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.21"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = "0.7.9"
surrealdb = { version = "1.0.0", features = ["kv-mem", "kv-rocksdb"] }
mavlink = "0.12.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = { version = "3.3.0", features = ["json"] }
actix = "0.13.3"
actix-cors = "0.6.4"
actix-web = "4"
actix-web-actors = "4.3.0"

[dev-dependencies]
test-case = "*"
