[package]
name = "brygge"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
anyhow = "1.0.87"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = "0.7.12"
surrealdb = { version = "1.5.4", features = ["kv-mem", "kv-rocksdb"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = { version = "3.9.0", features = ["json"] }
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
num-traits = "0.2.19"
serialport = "4.5.0"
mavlink = "0.11.0"

[dev-dependencies]
test-case = "*"
