[package]
name = "dreka"
version = "0.1.0"
description = "UX-focused ground control station"
authors = ["mishkarogachev@gmail.com"]
license = "BSD 3-Clause License"
repository = "https://github.com/MishkaRogachev/Dreka"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
brygge = { path = "../../server/"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
